--- a/Pandas_zadania.ipynb
+++ b/Pandas_zadania.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6814a9bf",
+   "id": "1ab1d73a",
    "metadata": {},
    "source": [
     "#### Pandas - Zadanie 1 - Dane\n",
@@ -193,9 +193,106 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5ab67798",
+   "metadata": {},
+   "source": [
+    "### Pandas - Zadanie 2 - Najczęstsze nazwisko\n",
+    "\n",
+    "#### Osób o jakim nazwisku jest najwięcej ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "144603b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Babacka    6\n",
+       "Abacki     6\n",
+       "Cabacki    6\n",
+       "Name: nazwisko, dtype: int64"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset['nazwisko'].value_counts()[dataset['nazwisko'].value_counts() == dataset['nazwisko'].value_counts().max()]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "51c0541a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Babacka    6\n",
+       "Abacki     6\n",
+       "Cabacki    6\n",
+       "Dabacki    4\n",
+       "Ebacka     3\n",
+       "Fabacki    2\n",
+       "Abacka     2\n",
+       "Babacki    2\n",
+       "Cabacka    1\n",
+       "Gabacki    1\n",
+       "Habacka    1\n",
+       "Ibacka     1\n",
+       "Gabacka    1\n",
+       "Dabacka    1\n",
+       "Ebacki     1\n",
+       "Fabacka    1\n",
+       "Name: nazwisko, dtype: int64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#to są moje wczesniejsze próby, chcę je mieć w jednym pliku :-)\n",
+    "dataset.nazwisko.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "5ee20965",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     Abacki\n",
+       "1    Babacka\n",
+       "2    Cabacki\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#to są moje wczesniejsze próby, chcę je mieć w jednym pliku :-)\n",
+    "dataset.nazwisko.mode()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e51d47ba",
+   "id": "d9f68a47",
    "metadata": {},
    "outputs": [],
    "source": []
