Dodane zadaie nr 3

--- a/Pandas_zadania.ipynb
+++ b/Pandas_zadania.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1ab1d73a",
+   "id": "980bc1d5",
    "metadata": {},
    "source": [
     "#### Pandas - Zadanie 1 - Dane\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "id": "ed4614a4",
    "metadata": {},
    "outputs": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ab67798",
+   "id": "5135fdfd",
    "metadata": {},
    "source": [
     "### Pandas - Zadanie 2 - Najczęstsze nazwisko\n",
@@ -204,8 +204,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "144603b7",
+   "execution_count": 79,
+   "id": "e26f0117",
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
        "Name: nazwisko, dtype: int64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,8 +228,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "51c0541a",
+   "execution_count": 8,
+   "id": "5ddad3ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Babacka'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset['nazwisko'].value_counts().idxmax()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "6dfe387c",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +275,7 @@
        "Name: nazwisko, dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "5ee20965",
+   "id": "60df48c3",
    "metadata": {},
    "outputs": [
     {
@@ -290,9 +311,530 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c877591d",
+   "metadata": {},
+   "source": [
+    "### Pandas - Zadanie 3 - Płeć\n",
+    "\n",
+    "#### Po kolumnie z nazwiskiem dodaj kolumnę reprezentującą płeć danej osoby. Można wykorzystać fakt, że imiona kobiet kończą się literka 'a'."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b9b9296",
+   "metadata": {},
+   "source": [
+    "##### Rozwiązanie 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "0d73638a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plec1(x):  # w argumencie zawsze zewnętrzna funkcji, moze być tez lambda\n",
+    "    if x[-1]=='a':\n",
+    "        return 'K'\n",
+    "    else:\n",
+    "        return 'M'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "7f0a0fc9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset['płeć'] = dataset['imię'].apply(plec1) # w apply w argumencie zawsze zewnętrzna funkcji, moze być tez lambda"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "8ad1eff1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#potem trzeba zmienić kolejnośc kolumn\n",
+    "dataset = dataset[['imię', 'nazwisko','płeć', 'rok urodzenia', 'miesiac urodzenia', 'dzień urodzenia','miejsce urodzenia', 'miasto, w którym znajduje się oddział firmy', 'departament, w którym pracuje dana osoba', 'rok roczęcia pracy w firmie','miesiac rozpoczęcia pracy','dzień rozpoczęcia pracy','doswiadczenie (w latach)']]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "eb7fc7dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>imię</th>\n",
+       "      <th>nazwisko</th>\n",
+       "      <th>płeć</th>\n",
+       "      <th>rok urodzenia</th>\n",
+       "      <th>miesiac urodzenia</th>\n",
+       "      <th>dzień urodzenia</th>\n",
+       "      <th>miejsce urodzenia</th>\n",
+       "      <th>miasto, w którym znajduje się oddział firmy</th>\n",
+       "      <th>departament, w którym pracuje dana osoba</th>\n",
+       "      <th>rok roczęcia pracy w firmie</th>\n",
+       "      <th>miesiac rozpoczęcia pracy</th>\n",
+       "      <th>dzień rozpoczęcia pracy</th>\n",
+       "      <th>doswiadczenie (w latach)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Barbara</td>\n",
+       "      <td>Babacka</td>\n",
+       "      <td>K</td>\n",
+       "      <td>1971</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Gdynia</td>\n",
+       "      <td>Gdansk</td>\n",
+       "      <td>Data Science</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5</td>\n",
+       "      <td>15</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Celina</td>\n",
+       "      <td>Cabacka</td>\n",
+       "      <td>K</td>\n",
+       "      <td>1969</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Sopot</td>\n",
+       "      <td>Gdansk</td>\n",
+       "      <td>Software Development</td>\n",
+       "      <td>2013.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>25</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Dariusz</td>\n",
+       "      <td>Dabacki</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1972</td>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Lublin</td>\n",
+       "      <td>Gdansk</td>\n",
+       "      <td>HR</td>\n",
+       "      <td>2020.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      imię nazwisko płeć  rok urodzenia  miesiac urodzenia  dzień urodzenia  \\\n",
+       "0  Barbara  Babacka    K           1971                  4                5   \n",
+       "1   Celina  Cabacka    K           1969                  6                7   \n",
+       "2  Dariusz  Dabacki    M           1972                  8                9   \n",
+       "\n",
+       "  miejsce urodzenia miasto, w którym znajduje się oddział firmy  \\\n",
+       "0            Gdynia                                      Gdansk   \n",
+       "1             Sopot                                      Gdansk   \n",
+       "2            Lublin                                      Gdansk   \n",
+       "\n",
+       "  departament, w którym pracuje dana osoba  rok roczęcia pracy w firmie  \\\n",
+       "0                             Data Science                          NaN   \n",
+       "1                     Software Development                       2013.0   \n",
+       "2                                       HR                       2020.0   \n",
+       "\n",
+       "   miesiac rozpoczęcia pracy  dzień rozpoczęcia pracy  \\\n",
+       "0                          5                       15   \n",
+       "1                          6                       25   \n",
+       "2                          4                        5   \n",
+       "\n",
+       "   doswiadczenie (w latach)  \n",
+       "0                        10  \n",
+       "1                        35  \n",
+       "2                         4  "
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c1a6efa",
+   "metadata": {},
+   "source": [
+    "##### Rozwiązanie 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "7d058be8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset.drop('płeć', axis=1, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "3816569d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plec2(kolumna):\n",
+    "    lista_plci = []\n",
+    "    for i in range(len(kolumna)):\n",
+    "        if kolumna[i][-1] == 'a':\n",
+    "            lista_plci.append('K')\n",
+    "        else:\n",
+    "            lista_plci.append('M')\n",
+    "    \n",
+    "    return lista_plci"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "97d00a29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset.insert(2, 'płeć', plec2(dataset.imię))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "cc0e1917",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>imię</th>\n",
+       "      <th>nazwisko</th>\n",
+       "      <th>płeć</th>\n",
+       "      <th>rok urodzenia</th>\n",
+       "      <th>miesiac urodzenia</th>\n",
+       "      <th>dzień urodzenia</th>\n",
+       "      <th>miejsce urodzenia</th>\n",
+       "      <th>miasto, w którym znajduje się oddział firmy</th>\n",
+       "      <th>departament, w którym pracuje dana osoba</th>\n",
+       "      <th>rok roczęcia pracy w firmie</th>\n",
+       "      <th>miesiac rozpoczęcia pracy</th>\n",
+       "      <th>dzień rozpoczęcia pracy</th>\n",
+       "      <th>doswiadczenie (w latach)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Barbara</td>\n",
+       "      <td>Babacka</td>\n",
+       "      <td>K</td>\n",
+       "      <td>1971</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Gdynia</td>\n",
+       "      <td>Gdansk</td>\n",
+       "      <td>Data Science</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5</td>\n",
+       "      <td>15</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Celina</td>\n",
+       "      <td>Cabacka</td>\n",
+       "      <td>K</td>\n",
+       "      <td>1969</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Sopot</td>\n",
+       "      <td>Gdansk</td>\n",
+       "      <td>Software Development</td>\n",
+       "      <td>2013.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>25</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Dariusz</td>\n",
+       "      <td>Dabacki</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1972</td>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Lublin</td>\n",
+       "      <td>Gdansk</td>\n",
+       "      <td>HR</td>\n",
+       "      <td>2020.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      imię nazwisko płeć  rok urodzenia  miesiac urodzenia  dzień urodzenia  \\\n",
+       "0  Barbara  Babacka    K           1971                  4                5   \n",
+       "1   Celina  Cabacka    K           1969                  6                7   \n",
+       "2  Dariusz  Dabacki    M           1972                  8                9   \n",
+       "\n",
+       "  miejsce urodzenia miasto, w którym znajduje się oddział firmy  \\\n",
+       "0            Gdynia                                      Gdansk   \n",
+       "1             Sopot                                      Gdansk   \n",
+       "2            Lublin                                      Gdansk   \n",
+       "\n",
+       "  departament, w którym pracuje dana osoba  rok roczęcia pracy w firmie  \\\n",
+       "0                             Data Science                          NaN   \n",
+       "1                     Software Development                       2013.0   \n",
+       "2                                       HR                       2020.0   \n",
+       "\n",
+       "   miesiac rozpoczęcia pracy  dzień rozpoczęcia pracy  \\\n",
+       "0                          5                       15   \n",
+       "1                          6                       25   \n",
+       "2                          4                        5   \n",
+       "\n",
+       "   doswiadczenie (w latach)  \n",
+       "0                        10  \n",
+       "1                        35  \n",
+       "2                         4  "
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2cc9a35",
+   "metadata": {},
+   "source": [
+    "##### Rozwiązanie 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "8d87bd16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plec3 =  dataset['imię'].apply(lambda imię: imię[-1])=='a'\n",
+    "dataset.insert(2, 'płeć', plec3)\n",
+    "dataset['płeć'] = dataset['płeć'].replace(True, \"K\")\n",
+    "dataset['płeć'] = dataset['płeć'].replace(False, \"M\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "bb12eb86",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>imię</th>\n",
+       "      <th>nazwisko</th>\n",
+       "      <th>płeć</th>\n",
+       "      <th>rok urodzenia</th>\n",
+       "      <th>miesiac urodzenia</th>\n",
+       "      <th>dzień urodzenia</th>\n",
+       "      <th>miejsce urodzenia</th>\n",
+       "      <th>miasto, w którym znajduje się oddział firmy</th>\n",
+       "      <th>departament, w którym pracuje dana osoba</th>\n",
+       "      <th>rok roczęcia pracy w firmie</th>\n",
+       "      <th>miesiac rozpoczęcia pracy</th>\n",
+       "      <th>dzień rozpoczęcia pracy</th>\n",
+       "      <th>doswiadczenie (w latach)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Barbara</td>\n",
+       "      <td>Babacka</td>\n",
+       "      <td>K</td>\n",
+       "      <td>1971</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Gdynia</td>\n",
+       "      <td>Gdansk</td>\n",
+       "      <td>Data Science</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5</td>\n",
+       "      <td>15</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Celina</td>\n",
+       "      <td>Cabacka</td>\n",
+       "      <td>K</td>\n",
+       "      <td>1969</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Sopot</td>\n",
+       "      <td>Gdansk</td>\n",
+       "      <td>Software Development</td>\n",
+       "      <td>2013.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>25</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Dariusz</td>\n",
+       "      <td>Dabacki</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1972</td>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Lublin</td>\n",
+       "      <td>Gdansk</td>\n",
+       "      <td>HR</td>\n",
+       "      <td>2020.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      imię nazwisko płeć  rok urodzenia  miesiac urodzenia  dzień urodzenia  \\\n",
+       "0  Barbara  Babacka    K           1971                  4                5   \n",
+       "1   Celina  Cabacka    K           1969                  6                7   \n",
+       "2  Dariusz  Dabacki    M           1972                  8                9   \n",
+       "\n",
+       "  miejsce urodzenia miasto, w którym znajduje się oddział firmy  \\\n",
+       "0            Gdynia                                      Gdansk   \n",
+       "1             Sopot                                      Gdansk   \n",
+       "2            Lublin                                      Gdansk   \n",
+       "\n",
+       "  departament, w którym pracuje dana osoba  rok roczęcia pracy w firmie  \\\n",
+       "0                             Data Science                          NaN   \n",
+       "1                     Software Development                       2013.0   \n",
+       "2                                       HR                       2020.0   \n",
+       "\n",
+       "   miesiac rozpoczęcia pracy  dzień rozpoczęcia pracy  \\\n",
+       "0                          5                       15   \n",
+       "1                          6                       25   \n",
+       "2                          4                        5   \n",
+       "\n",
+       "   doswiadczenie (w latach)  \n",
+       "0                        10  \n",
+       "1                        35  \n",
+       "2                         4  "
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.head(3)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9f68a47",
+   "id": "5bd3a42f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a199d60a",
    "metadata": {},
    "outputs": [],
    "source": []
