Dodane zadanie nr 4

--- a/Pandas_zadania.ipynb
+++ b/Pandas_zadania.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "980bc1d5",
+   "id": "8791cd48",
    "metadata": {},
    "source": [
-    "#### Pandas - Zadanie 1 - Dane\n",
+    "### Pandas - Zadanie 1 - Dane\n",
     "\n",
     "##### Załaduj zbiór danych korzystajac z biblioteki Pandas. Kolumny w naszym zbiorze danych, to:\n",
     "\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "id": "ed4614a4",
    "metadata": {},
    "outputs": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "id": "60df48c3",
    "metadata": {},
    "outputs": [
@@ -300,7 +300,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 6,
    "id": "0d73638a",
    "metadata": {},
    "outputs": [],
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 7,
    "id": "7f0a0fc9",
    "metadata": {},
    "outputs": [],
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 8,
    "id": "8ad1eff1",
    "metadata": {},
    "outputs": [],
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 9,
    "id": "eb7fc7dc",
    "metadata": {},
    "outputs": [
@@ -485,7 +485,7 @@
        "2                         4  "
       ]
      },
-     "execution_count": 99,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,17 +824,309 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5bd3a42f",
+   "cell_type": "markdown",
+   "id": "b49adccc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Zadanie 4 - Sortowanie\n",
+    "\n",
+    "#### Posortuj zbiór danych alfabetycznie po nazwiskach, a w ramach jednego nazwiska po roku urodzenia."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a199d60a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>imię</th>\n",
+       "      <th>nazwisko</th>\n",
+       "      <th>płeć</th>\n",
+       "      <th>rok urodzenia</th>\n",
+       "      <th>miesiac urodzenia</th>\n",
+       "      <th>dzień urodzenia</th>\n",
+       "      <th>miejsce urodzenia</th>\n",
+       "      <th>miasto, w którym znajduje się oddział firmy</th>\n",
+       "      <th>departament, w którym pracuje dana osoba</th>\n",
+       "      <th>rok roczęcia pracy w firmie</th>\n",
+       "      <th>miesiac rozpoczęcia pracy</th>\n",
+       "      <th>dzień rozpoczęcia pracy</th>\n",
+       "      <th>doswiadczenie (w latach)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Anastazja</td>\n",
+       "      <td>Abacka</td>\n",
+       "      <td>K</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>6</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Gdansk</td>\n",
+       "      <td>Krakow</td>\n",
+       "      <td>HR</td>\n",
+       "      <td>2017.0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>25</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>Alicja</td>\n",
+       "      <td>Abacka</td>\n",
+       "      <td>K</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Gdansk</td>\n",
+       "      <td>Warszawa</td>\n",
+       "      <td>Accounting</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "      <td>15</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Roman</td>\n",
+       "      <td>Abacki</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1962</td>\n",
+       "      <td>2</td>\n",
+       "      <td>23</td>\n",
+       "      <td>Lublin</td>\n",
+       "      <td>Krakow</td>\n",
+       "      <td>Data Science</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5</td>\n",
+       "      <td>12</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Janusz</td>\n",
+       "      <td>Abacki</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1975</td>\n",
+       "      <td>9</td>\n",
+       "      <td>16</td>\n",
+       "      <td>Gdynia</td>\n",
+       "      <td>Gdansk</td>\n",
+       "      <td>Sales</td>\n",
+       "      <td>1995.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>5</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Antoni</td>\n",
+       "      <td>Abacki</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1982</td>\n",
+       "      <td>7</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Warszawa</td>\n",
+       "      <td>Krakow</td>\n",
+       "      <td>HR</td>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>20</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>Antoni</td>\n",
+       "      <td>Abacki</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1984</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Ryki</td>\n",
+       "      <td>Warszawa</td>\n",
+       "      <td>HR</td>\n",
+       "      <td>2015.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Franciszek</td>\n",
+       "      <td>Abacki</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1993</td>\n",
+       "      <td>12</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Lublin</td>\n",
+       "      <td>Krakow</td>\n",
+       "      <td>Data Science</td>\n",
+       "      <td>1997.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>25</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>Wiktor</td>\n",
+       "      <td>Abacki</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>8</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Gdansk</td>\n",
+       "      <td>Warszawa</td>\n",
+       "      <td>Accounting</td>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>15</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Karolina</td>\n",
+       "      <td>Babacka</td>\n",
+       "      <td>K</td>\n",
+       "      <td>1965</td>\n",
+       "      <td>8</td>\n",
+       "      <td>17</td>\n",
+       "      <td>Legnica</td>\n",
+       "      <td>Gdansk</td>\n",
+       "      <td>Data Science</td>\n",
+       "      <td>2005.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>15</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Barbara</td>\n",
+       "      <td>Babacka</td>\n",
+       "      <td>K</td>\n",
+       "      <td>1971</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Gdynia</td>\n",
+       "      <td>Gdansk</td>\n",
+       "      <td>Data Science</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5</td>\n",
+       "      <td>15</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          imię nazwisko płeć  rok urodzenia  miesiac urodzenia  \\\n",
+       "21   Anastazja   Abacka    K           1990                  6   \n",
+       "37      Alicja   Abacka    K           1992                  2   \n",
+       "15       Roman   Abacki    M           1962                  2   \n",
+       "8       Janusz   Abacki    M           1975                  9   \n",
+       "22      Antoni   Abacki    M           1982                  7   \n",
+       "34      Antoni   Abacki    M           1984                  5   \n",
+       "27  Franciszek   Abacki    M           1993                 12   \n",
+       "31      Wiktor   Abacki    M           1995                  8   \n",
+       "9     Karolina  Babacka    K           1965                  8   \n",
+       "0      Barbara  Babacka    K           1971                  4   \n",
+       "\n",
+       "    dzień urodzenia miejsce urodzenia  \\\n",
+       "21               21            Gdansk   \n",
+       "37                5            Gdansk   \n",
+       "15               23            Lublin   \n",
+       "8                16            Gdynia   \n",
+       "22               20          Warszawa   \n",
+       "34                8              Ryki   \n",
+       "27               15            Lublin   \n",
+       "31               11            Gdansk   \n",
+       "9                17           Legnica   \n",
+       "0                 5            Gdynia   \n",
+       "\n",
+       "   miasto, w którym znajduje się oddział firmy  \\\n",
+       "21                                      Krakow   \n",
+       "37                                    Warszawa   \n",
+       "15                                      Krakow   \n",
+       "8                                       Gdansk   \n",
+       "22                                      Krakow   \n",
+       "34                                    Warszawa   \n",
+       "27                                      Krakow   \n",
+       "31                                    Warszawa   \n",
+       "9                                       Gdansk   \n",
+       "0                                       Gdansk   \n",
+       "\n",
+       "   departament, w którym pracuje dana osoba  rok roczęcia pracy w firmie  \\\n",
+       "21                                       HR                       2017.0   \n",
+       "37                               Accounting                          NaN   \n",
+       "15                             Data Science                          NaN   \n",
+       "8                                     Sales                       1995.0   \n",
+       "22                                       HR                       2018.0   \n",
+       "34                                       HR                       2015.0   \n",
+       "27                             Data Science                       1997.0   \n",
+       "31                               Accounting                       2018.0   \n",
+       "9                              Data Science                       2005.0   \n",
+       "0                              Data Science                          NaN   \n",
+       "\n",
+       "    miesiac rozpoczęcia pracy  dzień rozpoczęcia pracy  \\\n",
+       "21                          9                       25   \n",
+       "37                          3                       15   \n",
+       "15                          5                       12   \n",
+       "8                          11                        5   \n",
+       "22                         10                       20   \n",
+       "34                          5                       10   \n",
+       "27                          4                       25   \n",
+       "31                          4                       15   \n",
+       "9                           4                       15   \n",
+       "0                           5                       15   \n",
+       "\n",
+       "    doswiadczenie (w latach)  \n",
+       "21                        13  \n",
+       "37                        13  \n",
+       "15                         8  \n",
+       "8                         20  \n",
+       "22                        12  \n",
+       "34                        16  \n",
+       "27                         8  \n",
+       "31                         4  \n",
+       "9                         30  \n",
+       "0                         10  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.sort_values(by=['nazwisko', 'rok urodzenia']).head(10)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a199d60a",
+   "id": "fd52ea69",
    "metadata": {},
    "outputs": [],
    "source": []
