--- a/Pandas_zadania_7_12.ipynb
+++ b/Pandas_zadania_7_12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "df63d485",
+   "id": "bc7fc57f",
    "metadata": {},
    "source": [
     "### Zadanie 7 - Data Scientists\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b9ea4444",
+   "id": "508e69ee",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "f0ba2c43",
+   "id": "3eb84a56",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88d328d7",
+   "id": "3e6c4aa9",
    "metadata": {},
    "source": [
     "##### inne zapisy - bym pamiętała"
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "a308b31a",
+   "id": "efb00656",
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "d9e375df",
+   "id": "3303b158",
    "metadata": {},
    "outputs": [
     {
@@ -224,9 +224,213 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6d5f482f",
+   "metadata": {},
+   "source": [
+    "###  Zadanie 8 - Nazwy departamentów\n",
+    "\n",
+    "##### Szef chciałby zmienić nazewnictwo departamentów w całej firmie. Napisz kod, który zamieni wartości w kolumnie reprezentującej departament, nastepująco:\n",
+    "\n",
+    "* Software Development -> Software Development Team\n",
+    "* HR -> Human Resources\n",
+    "* Data Science -> Data Analytics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "7536225a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>imię</th>\n",
+       "      <th>nazwisko</th>\n",
+       "      <th>płeć</th>\n",
+       "      <th>rok urodzenia</th>\n",
+       "      <th>miesiac urodzenia</th>\n",
+       "      <th>dzień urodzenia</th>\n",
+       "      <th>miejsce urodzenia</th>\n",
+       "      <th>miasto, w którym znajduje się oddział firmy</th>\n",
+       "      <th>departament, w którym pracuje dana osoba</th>\n",
+       "      <th>rok rozpoczęcia pracy w firmie</th>\n",
+       "      <th>miesiac rozpoczęcia pracy</th>\n",
+       "      <th>dzień rozpoczęcia pracy</th>\n",
+       "      <th>doswiadczenie (w latach)</th>\n",
+       "      <th>poziom</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Barbara</td>\n",
+       "      <td>Babacka</td>\n",
+       "      <td>K</td>\n",
+       "      <td>1971</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Gdynia</td>\n",
+       "      <td>Gdansk</td>\n",
+       "      <td>Data Analytics</td>\n",
+       "      <td>2008.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>15</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Senior</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Celina</td>\n",
+       "      <td>Cabacka</td>\n",
+       "      <td>K</td>\n",
+       "      <td>1969</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Sopot</td>\n",
+       "      <td>Gdansk</td>\n",
+       "      <td>Software Development Team</td>\n",
+       "      <td>2013.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>25</td>\n",
+       "      <td>35</td>\n",
+       "      <td>Ekspert</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Dariusz</td>\n",
+       "      <td>Dabacki</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1972</td>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Lublin</td>\n",
+       "      <td>Gdansk</td>\n",
+       "      <td>Human Resources</td>\n",
+       "      <td>2020.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Mid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Ewelina</td>\n",
+       "      <td>Ebacka</td>\n",
+       "      <td>K</td>\n",
+       "      <td>1968</td>\n",
+       "      <td>10</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Warszawa</td>\n",
+       "      <td>Gdansk</td>\n",
+       "      <td>Accounting</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>15</td>\n",
+       "      <td>30</td>\n",
+       "      <td>Ekspert</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Ferdynand</td>\n",
+       "      <td>Fabacki</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1973</td>\n",
+       "      <td>11</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Walbrzych</td>\n",
+       "      <td>Gdansk</td>\n",
+       "      <td>Human Resources</td>\n",
+       "      <td>2001.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>25</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Ekspert</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        imię nazwisko płeć  rok urodzenia  miesiac urodzenia  dzień urodzenia  \\\n",
+       "0    Barbara  Babacka    K           1971                  4                5   \n",
+       "1     Celina  Cabacka    K           1969                  6                7   \n",
+       "2    Dariusz  Dabacki    M           1972                  8                9   \n",
+       "3    Ewelina   Ebacka    K           1968                 10               11   \n",
+       "4  Ferdynand  Fabacki    M           1973                 11               12   \n",
+       "\n",
+       "  miejsce urodzenia miasto, w którym znajduje się oddział firmy  \\\n",
+       "0            Gdynia                                      Gdansk   \n",
+       "1             Sopot                                      Gdansk   \n",
+       "2            Lublin                                      Gdansk   \n",
+       "3          Warszawa                                      Gdansk   \n",
+       "4         Walbrzych                                      Gdansk   \n",
+       "\n",
+       "  departament, w którym pracuje dana osoba  rok rozpoczęcia pracy w firmie  \\\n",
+       "0                           Data Analytics                          2008.0   \n",
+       "1                Software Development Team                          2013.0   \n",
+       "2                          Human Resources                          2020.0   \n",
+       "3                               Accounting                          2000.0   \n",
+       "4                          Human Resources                          2001.0   \n",
+       "\n",
+       "   miesiac rozpoczęcia pracy  dzień rozpoczęcia pracy  \\\n",
+       "0                          5                       15   \n",
+       "1                          6                       25   \n",
+       "2                          4                        5   \n",
+       "3                          7                       15   \n",
+       "4                          8                       25   \n",
+       "\n",
+       "   doswiadczenie (w latach)   poziom  \n",
+       "0                        10   Senior  \n",
+       "1                        35  Ekspert  \n",
+       "2                         4      Mid  \n",
+       "3                        30  Ekspert  \n",
+       "4                        20  Ekspert  "
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def change_name(x):\n",
+    "    if x == 'Software Development':\n",
+    "        return 'Software Development Team'\n",
+    "    elif x == 'HR':\n",
+    "        return 'Human Resources'\n",
+    "    elif x == \"Data Science\":\n",
+    "        return \"Data Analytics\"\n",
+    "    else:\n",
+    "        return x\n",
+    "\n",
+    "dataset['departament, w którym pracuje dana osoba'] = dataset['departament, w którym pracuje dana osoba'].apply(change_name)\n",
+    "dataset.head()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f67c13f9",
+   "id": "ef248207",
    "metadata": {},
    "outputs": [],
    "source": []
