Dodane zadanie nr 9

--- a/Pandas_zadania_7_12.ipynb
+++ b/Pandas_zadania_7_12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bc7fc57f",
+   "id": "b09cacef",
    "metadata": {},
    "source": [
     "### Zadanie 7 - Data Scientists\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "508e69ee",
+   "id": "67eeca24",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "3eb84a56",
+   "id": "2ac116bb",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e6c4aa9",
+   "id": "f407bbbd",
    "metadata": {},
    "source": [
     "##### inne zapisy - bym pamiętała"
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "efb00656",
+   "id": "24ce7467",
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "3303b158",
+   "id": "742b7450",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d5f482f",
+   "id": "02ae5c81",
    "metadata": {},
    "source": [
     "###  Zadanie 8 - Nazwy departamentów\n",
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "7536225a",
+   "id": "e0b26b9a",
    "metadata": {},
    "outputs": [
     {
@@ -428,9 +428,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0eb3209b",
+   "metadata": {},
+   "source": [
+    "### Pandas - Zadanie 9 - Seniorzy\n",
+    "\n",
+    "##### Które biuro firmy ma najwięcej osób na Seniorskim poziomie doświadczenia ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "9447e945",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Krakow', 7)"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = dataset[dataset.poziom == 'Senior'].groupby(['miasto, w którym znajduje się oddział firmy']).count().poziom\n",
+    "data.idxmax(), data[data.idxmax()]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef248207",
+   "id": "4e2849b5",
    "metadata": {},
    "outputs": [],
    "source": []
